--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -8,11 +8,10 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
 }
 .team__list {
-  display: flex;
+  display: block;
   justify-content: center;
 }
 .img {
