--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,8 @@ ol {
   padding-left: 0;
 }
 
-.link {
+.link,
+.mob__soc {
   text-decoration: none;
 }
 
@@ -34,7 +35,8 @@ ol {
 .list,
 .footer-link,
 .link,
-.footer-soc-list {
+.footer-soc-list,
+.mob__soc {
   list-style: none;
 }
 
@@ -51,12 +53,28 @@ ol {
 }
 
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid red;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    outline: 1px solid red;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    outline: 1px solid green;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    outline: 1px solid blue;
+  }
 }
 
 .flex-container {
@@ -267,10 +285,6 @@ ol {
 .list {
   display: block;
   justify-content: space-between;
-  margin-right: 30px;
-}
-.list:nth-child(3n) {
-  margin-right: 0;
 }
 
 .logo__leftpart {
@@ -366,9 +380,94 @@ ol {
   color: #2196f3;
 }
 
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  width: 100vw;
+  height: 100vw;
+  z-index: 1;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+.mob-menu .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.mob__list {
+  position: relative;
+  text-align: left;
+}
+
+.mob__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-connect {
+  text-align: left;
+}
+
+.mob-connect__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-connect__mail {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mob-connect__tel {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 0.9 px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.menu-open-btn {
+  display: block;
+  margin-left: auto;
+}
+
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 30px;
+}
+
+.mob__soc {
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+}
+
+.soc__item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
 .hero {
-  max-width: 1600px;
-  height: 600px;
+  width: 100%;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -376,16 +475,40 @@ ol {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding-bottom: 200px;
-  padding-top: 200px;
+  padding-bottom: 118px;
+  padding-top: 118px;
+}
+@media screen and (min-width: 480px) {
+  .hero {
+    max-width: 480px;
+    height: 400px;
+    padding-bottom: 118px;
+    padding-top: 118px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    padding-bottom: 200px;
+    padding-top: 200px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    padding-bottom: 200px;
+    padding-top: 200px;
+  }
 }
 
 .hero__title {
-  max-width: 1600px;
+  max-width: 480px;
   display: inline-block;
   width: 696px;
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.4;
   text-align: center;
   letter-spacing: 0.06em;
@@ -431,12 +554,11 @@ ol {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
 }
 
 .team__list {
-  display: flex;
+  display: block;
   justify-content: center;
 }
 
@@ -533,8 +655,7 @@ ol {
 }
 
 .connect {
-  display: flex;
-  margin-left: auto;
+  display: none;
 }
 
 .connect__link {
@@ -570,6 +691,10 @@ ol {
 }
 .connect__item:hover, .connect__item:focus {
   color: var(--accent-color);
+}
+
+.nav {
+  display: none;
 }
 
 .nav__item {
@@ -614,6 +739,10 @@ ol {
   display: flex;
 }
 
+.activity-section {
+  display: none;
+}
+
 .title {
   display: block;
   text-align: center;
@@ -627,7 +756,7 @@ ol {
 }
 
 .activity {
-  display: flex;
+  display: none;
   justify-content: space-between;
 }
 
@@ -676,19 +805,13 @@ ol {
 
 .clients {
   display: flex;
-  justify-content: center;
-}
-.clients:last-child {
-  margin-right: 0;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .clients__item {
-  width: 170px;
+  width: 210px;
   height: 92px;
-  margin-right: 30px;
-}
-.clients__item:last-child {
-  margin-right: 0;
 }
 
 .clients__link {
@@ -828,6 +951,8 @@ ol {
 
 .container-footer {
   display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
@@ -936,10 +1061,12 @@ ol {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: rgb(255, 255, 255);
+  text-align: center;
 }
 
 .mail-box {
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding-top: 20px;
 }
@@ -1007,28 +1134,19 @@ ol {
 }
 
 .skils {
-  display: flex;
-  margin-right: -30px;
+  display: block;
 }
 
 .skils__item {
   display: block;
-  width: 270px;
-  justify-content: space-between;
-  margin-right: 30px;
-}
-.skils__item:nth-child(4n) {
-  margin-right: 0;
-  margin-bottom: 0;
+  width: 450px;
+  text-align: center;
 }
 
 .skils__icon {
-  display: flex;
-  width: 270px;
+  width: 450px;
   height: 120px;
   border-radius: 4px;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 30px;
   background-color: rgb(245, 244, 250);
 }
@@ -1039,7 +1157,6 @@ ol {
 }
 
 .skils__title {
-  display: block;
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
@@ -1049,9 +1166,9 @@ ol {
 }
 
 .skils__text {
-  display: block;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
+  text-align: left;
 }/*# sourceMappingURL=main.css.map */
