--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,21 +1,26 @@
 .container {
-  width: 1200px;
+  // width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid red;
-}
+  // outline: 1px solid red;
 
-// @media screen and (min-width: 480px) {
-//   width: 480px;
-// }
-// @media screen and (min-width: 768px) {
-//   width: 768px;
-// }
-// @media screen and (min-width: 1140px) {
-//   width: 1140px;
-// }
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    outline: 1px solid red;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    outline: 1px solid green;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    outline: 1px solid blue;
+  }
+}
 
 .flex-container {
   display: flex;
