--- a/sass/components/_list.scss
+++ b/sass/components/_list.scss
@@ -1,8 +1,8 @@
 .list {
   display: block;
   justify-content: space-between;
-  margin-right: 30px;
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
+  // margin-right: 30px;
+  // &:nth-child(3n) {
+  //   margin-right: 0;
+  // }
 }
