--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -9,19 +9,13 @@
 }
 .clients {
   display: flex;
-  justify-content: center;
-  &:last-child {
-    margin-right: 0;
-  }
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .clients__item {
-  width: 170px;
+  width: 210px;
   height: 92px;
-  margin-right: 30px;
-  &:last-child {
-    margin-right: 0;
-  }
 }
 
 .clients__link {
