--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -12,8 +12,9 @@
 }
 
 .connect {
-  display: flex;
-  margin-left: auto;
+  display: none;
+  // display: flex;
+  // margin-left: auto;
 }
 .connect__link {
   font-weight: 500;
