--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
-  max-width: 1600px;
-  height: 600px;
+  width: 100%;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -13,21 +13,47 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding-bottom: 200px;
-  padding-top: 200px;
+  padding-bottom: 118px;
+  padding-top: 118px;
+
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+    height: 400px;
+    padding-bottom: 118px;
+    padding-top: 118px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 1600px;
+    height: 600px;
+    padding-bottom: 200px;
+    padding-top: 200px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    height: 600px;
+    padding-bottom: 200px;
+    padding-top: 200px;
+  }
 }
+
 .hero__title {
-  max-width: 1600px;
+  max-width: 480px;
   display: inline-block;
   width: 696px;
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
+
   line-height: 1.4;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin-bottom: 30px;
+
+  // max-width: 1600px;
+  // font-size: 44px;
 }
 
 .hero__button {
