--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -9,8 +9,7 @@ ol {
   margin: 0;
   padding-left: 0;
 }
-.link,
-.mob__soc {
+.link {
   text-decoration: none;
 }
 .activity__link {
@@ -25,7 +24,6 @@ ol {
 .list,
 .footer-link,
 .link,
-.footer-soc-list,
-.mob__soc {
+.footer-soc-list {
   list-style: none;
 }
