--- a/sass/components/_list.scss
+++ b/sass/components/_list.scss
@@ -1,8 +1,16 @@
 .list {
   display: block;
   justify-content: space-between;
-  // margin-right: 30px;
-  // &:nth-child(3n) {
-  //   margin-right: 0;
-  // }
+
+  @media screen and (min-width: 768px) {
+    gap: 30px;
+    margin-right: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+  }
 }
