--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  width: 100%;
+  width: 100%px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -24,7 +24,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 1600px;
+    max-width: 1200px;
     height: 600px;
     padding-bottom: 200px;
     padding-top: 200px;
@@ -39,21 +39,21 @@
 }
 
 .hero__title {
-  max-width: 480px;
+  max-width: 400px;
   display: inline-block;
   width: 696px;
   font-weight: 900;
   font-size: 26px;
-
   line-height: 1.4;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin-bottom: 30px;
-
-  // max-width: 1600px;
-  // font-size: 44px;
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    font-size: 44px;
+  }
 }
 
 .hero__button {
