--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ ol {
 .header-link,
 .hero-link,
 .list,
+.team__list,
 .footer-link,
 .link,
 .footer-soc-list {
@@ -291,9 +292,6 @@ ol {
   }
 }
 @media screen and (min-width: 1200px) {
-  .list {
-    margin-right: 30px;
-  }
   .list:nth-child(3n) {
     margin-right: 0;
   }
@@ -594,30 +592,68 @@ ol {
 }
 
 .team__list {
-  display: block;
   justify-content: center;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .img {
-  display: block;
-  margin-right: 30px;
+  width: 100%;
 }
-.img:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .img {
+    margin-right: 15px;
+  }
+  .img:last-child {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .img {
+    margin-right: 15px;
+  }
+  .img:last-child {
+    margin-right: 0;
+  }
 }
 
 .team__item {
-  display: block;
-  width: 370px;
+  width: 100%;
   justify-content: space-between;
   background-color: #ffffff;
   border: 1px solid #ececec;
-  margin-right: 30px;
+  margin-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team__item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: 354px;
+    margin-right: 15px;
+  }
+  .team__item:last-child {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: 270px;
+    margin-right: 30px;
+  }
+  .team__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .container-soc {
@@ -626,7 +662,6 @@ ol {
 }
 
 .name {
-  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -635,7 +670,6 @@ ol {
 }
 
 .profession {
-  display: block;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
@@ -842,12 +876,24 @@ ol {
 .clients {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 15px;
 }
 
 .clients__item {
   width: 210px;
-  height: 92px;
+  height: 92x;
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    width: 226px;
+    height: 92px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: 170px;
+    height: 92px;
+  }
 }
 
 .clients__link {
@@ -1170,13 +1216,24 @@ ol {
 }
 
 .skils {
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .skils__item {
-  display: block;
   width: 450px;
   text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .skils__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .skils__item {
+    width: 270px;
+  }
 }
 
 .skils__icon {
@@ -1185,6 +1242,18 @@ ol {
   border-radius: 4px;
   margin-bottom: 30px;
   background-color: rgb(245, 244, 250);
+}
+@media screen and (min-width: 768px) {
+  .skils__icon {
+    width: 354px;
+    height: 120px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .skils__icon {
+    width: 270px;
+    height: 120px;
+  }
 }
 
 .skils__title-icon {
