--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -10,12 +10,21 @@
 .clients {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 15px;
 }
 
 .clients__item {
   width: 210px;
-  height: 92px;
+  height: 92x;
+  @media screen and (min-width: 768px) {
+    width: 226px;
+    height: 92px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+    height: 92px;
+  }
 }
 
 .clients__link {
