--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -11,29 +11,62 @@
   letter-spacing: 0.03em;
 }
 .team__list {
-  display: block;
   justify-content: center;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
+
 .img {
-  display: block;
-  margin-right: 30px;
-  &:last-child {
-    margin-right: 0;
+  width: 100%;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 15px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 15px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
 .team__item {
-  display: block;
-  width: 370px;
+  width: 100%;
   justify-content: space-between;
   background-color: #ffffff;
   border: 1px solid #ececec;
-  margin-right: 30px;
+  margin-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  &:last-child {
-    margin-right: 0;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    margin-right: 15px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    margin-right: 30px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
@@ -42,7 +75,6 @@
   padding-bottom: 30px;
 }
 .name {
-  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -50,7 +82,6 @@
   letter-spacing: 0.03em;
 }
 .profession {
-  display: block;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
