--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -28,4 +28,10 @@
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 24px;
+  @media screen and (min-width: 768px) {
+    margin-right: 38px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 43px;
+  }
 }
