--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -4,17 +4,34 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
-  display: block;
-  // margin-right: 50px;
-  // &:nth-last-child(3n) {
-  //   margin-right: 0;
-  // }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 50px;
+    &:last-child(3n) {
+      margin-left: 0;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 50px;
+    &:nth-last-child(3n) {
+      margin-right: 0;
+    }
+  }
 }
 
 .connect {
   display: none;
-  // display: flex;
-  // margin-left: auto;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: auto;
+  }
 }
 .connect__link {
   font-weight: 500;
@@ -25,7 +42,6 @@
   display: block;
   text-align: right;
   margin-left: 50px;
-  display: block;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
