--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,5 +1,13 @@
 .nav {
   display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .nav__item {
@@ -8,10 +16,7 @@
   padding-bottom: 32px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  margin-right: 50px;
-  &:nth-last-child(-3n) {
-    margin-right: 0;
-  }
+
   &:hover,
   &:focus {
     color: var(--accent-color);
