--- a/css/main.css
+++ b/css/main.css
@@ -995,20 +995,35 @@ ol {
 
 .portfolio__button {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   padding-bottom: 56px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__button {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .list-portfolio {
   display: block;
   justify-content: space-between;
   margin-bottom: 30px;
-  margin-right: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-portfolio:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .list-portfolio {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .list-portfolio {
+    margin-right: 30px;
+  }
+  .list-portfolio:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 .list-portfolio:hover, .list-portfolio:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -1045,17 +1060,17 @@ ol {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-link {
+.portfolio__button-item {
   display: block;
   margin-right: 8px;
   align-items: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-link:nth-child(5n) {
+.portfolio__button-item:nth-child(5n) {
   margin-right: 0;
 }
-.hero-link:hover, .hero-link:focus {
+.portfolio__button-item:hover, .portfolio__button-item:focus {
   color: var(--accent-color);
 }
 
