--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,18 +1,33 @@
 .portfolio__button {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+
   padding-bottom: 56px;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 .list-portfolio {
   display: block;
   justify-content: space-between;
   margin-bottom: 30px;
-  margin-right: 30px;
+
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:nth-child(3n) {
-    margin-right: 0;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
   }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+  }
+
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -50,7 +65,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-link {
+.portfolio__button-item {
   display: block;
   margin-right: 8px;
   align-items: center;
