--- a/css/main.css
+++ b/css/main.css
@@ -1022,11 +1022,6 @@ ol {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 768px) {
-  .list-portfolio {
-    width: 354px;
-  }
-}
 @media screen and (min-width: 1200px) {
   .list-portfolio {
     margin-right: 30px;
@@ -1116,6 +1111,26 @@ ol {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.portfolio-container {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+  }
 }
 
 .footer {
