--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -18,7 +18,6 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) {
-    width: 354px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -111,4 +110,21 @@
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.portfolio-container {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+  }
 }
