--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -26,7 +26,9 @@
 }
 
 .img {
-  width: 100%;
+  max-width: 100%;
+  display: block;
+  height: auto;
 
   @media screen and (min-width: 768px) {
     margin-right: 15px;
