--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -54,7 +54,7 @@
 }
 
 .content-top-text {
-  position: absolute;
+  // position: absolute;
   top: 0;
   left: 0;
   font-weight: 400;
@@ -121,14 +121,14 @@
   text-align: center;
   margin-bottom: 30px;
 
-  @media screen and (min-width: 768px) {
-  }
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: -30px;
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: -30px;
-  }
+  // @media screen and (min-width: 768px) {
+  // }
+  // display: flex;
+  // flex-wrap: wrap;
+  // margin-bottom: -30px;
+  // @media screen and (min-width: 1200px) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   margin-bottom: -30px;
+  // }
 }
