--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ ol {
 }
 
 .container {
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -527,7 +528,7 @@ ol {
 }
 
 .hero {
-  width: 100% px;
+  width: 100%;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -642,7 +643,9 @@ ol {
 }
 
 .img {
-  width: 100%;
+  max-width: 100%;
+  display: block;
+  height: auto;
 }
 @media screen and (min-width: 768px) {
   .img {
@@ -1011,23 +1014,21 @@ ol {
 @media screen and (min-width: 1200px) {
   .portfolio__button {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
   }
 }
 
 .list-portfolio {
   display: block;
+  justify-content: space-between;
   margin-bottom: 30px;
+  margin-right: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 1200px) {
-  .list-portfolio {
-    margin-right: 30px;
-  }
-  .list-portfolio:nth-child(3n) {
-    margin-right: 0;
-  }
+.list-portfolio:nth-child(3n) {
+  margin-right: 0;
 }
 .list-portfolio:hover, .list-portfolio:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -1112,13 +1113,21 @@ ol {
   overflow: hidden;
 }
 
-.portfolio-container {
+.thumb {
   width: 100%;
+}
+
+.portfolio-container {
   text-align: center;
   margin-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: -30px;
 }
 @media screen and (min-width: 1200px) {
   .portfolio-container {
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: -30px;
   }
 }
