--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -12,26 +12,25 @@
 }
 .list-portfolio {
   display: block;
-  justify-content: space-between;
   margin-bottom: 30px;
-  margin-right: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
 
-  @media screen and (min-width: 768px) {
-    display: flex;
-    width: calc(100%-60px) / 2;
-  }
+  // // @media screen and (min-width: 768px) {
+  // //   display: flex;
+  // //   flex-wrap: wrap;
+  // //   margin-right: 30px;
+  // //   &:nth-child(3n) {
+  // //     margin-right: 0;
+  // //   }
+  // // }
 
-  @media screen and (min-width: 1200px) {
-    margin-right: 30px;
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-  }
+  // // @media screen and (min-width: 1200px) {
+  // //   margin-right: 30px;
+  // //   &:nth-child(3n) {
+  // //     margin-right: 0;
+  // //   }
+  // }
 
   &:hover,
   &:focus {
@@ -125,10 +124,11 @@
   margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
   }
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: -30px;
+
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-wrap: wrap;
