--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -16,21 +16,21 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  // // @media screen and (min-width: 768px) {
-  // //   display: flex;
-  // //   flex-wrap: wrap;
-  // //   margin-right: 30px;
-  // //   &:nth-child(3n) {
-  // //     margin-right: 0;
-  // //   }
-  // // }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+  }
 
-  // // @media screen and (min-width: 1200px) {
-  // //   margin-right: 30px;
-  // //   &:nth-child(3n) {
-  // //     margin-right: 0;
-  // //   }
-  // }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+  }
 
   &:hover,
   &:focus {
