--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -23,20 +23,20 @@
     &:nth-child(2n) {
       margin-right: 0;
     }
-  }
 
-  @media screen and (min-width: 1200px) {
-    margin-right: 30px;
-    &:nth-child(3n) {
-      margin-right: 0;
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+      display: flex;
+      flex-wrap: wrap;
+      width: calc(100% / 3 - 30px);
     }
   }
+}
 
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
+&:hover,
+&:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .list-portfolio:hover .content-top-text {
@@ -116,9 +116,7 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.thumb {
-  width: 100%;
-}
+
 .portfolio-container {
   text-align: center;
   margin-bottom: 30px;
@@ -127,6 +125,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: -30px;
+    margin-right: 30px;
   }
 
   @media screen and (min-width: 1200px) {
