--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,5 +1,5 @@
 .backdrop {
-  position: fixed;
+  // position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
@@ -9,7 +9,7 @@
 
 .modal {
   width: 450px;
-  min-height: 609px;
+  height: auto;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -21,7 +21,7 @@
   transition: transform 300ms;
   @media screen and (min-width: 768px) {
     width: 450px;
-    height: 609px;
+    height: auto;
   }
 
   @media screen and (min-width: 1200px) {
