--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,8 +1,7 @@
 .portfolio__button {
   display: flex;
   flex-wrap: wrap;
-
-  padding-bottom: 56px;
+  // padding-bottom: 56px;
 
   @media screen and (min-width: 1200px) {
     display: flex;
