--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -72,7 +72,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-right: 8px;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
   align-items: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
