--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -11,28 +11,43 @@
 }
 .list-portfolio {
   display: block;
+  justify-content: space-between;
   margin-bottom: 30px;
-  margin-right: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
+  // @media screen and (min-width: 768px) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   margin-right: 30px;
+  //   &:nth-child(2n) {
+  //     margin-right: 0;
+  //   }
 
-    @media screen and (min-width: 1200px) {
-      width: calc(100% / 3 - 30px);
-    }
-  }
+  //   @media screen and (min-width: 1200px) {
+  //     display: flex;
+  //     flex-wrap: wrap;
+  //     margin-right: 30px;
+  //     &:nth-child(3n) {
+  //       margin-right: 0;
+  //     }
+  //   }
+  // }
 }
 
 &:hover,
 &:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.list-portfolio:not(:last-child) {
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .list-portfolio:hover .content-top-text {
