--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -43,10 +43,10 @@
 
 .list-portfolio:not(:last-child) {
   @media screen and (min-width: 768px) {
-    margin-right: 30px;
+    // margin-right: 30px;
   }
   @media screen and (min-width: 1200px) {
-    margin-right: 30px;
+    // margin-right: 30px;
   }
 }
 
@@ -131,7 +131,7 @@
 }
 .content-link {
   display: flex;
-  margin-right: 30px;
+  // margin-right: 30px;
 }
 .portfolio-container {
   text-align: center;
