--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -16,23 +16,23 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  // @media screen and (min-width: 768px) {
-  //   display: flex;
-  //   flex-wrap: wrap;
-  //   margin-right: 30px;
-  //   &:nth-child(2n) {
-  //     margin-right: 0;
-  //   }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
 
-  //   @media screen and (min-width: 1200px) {
-  //     display: flex;
-  //     flex-wrap: wrap;
-  //     margin-right: 30px;
-  //     &:nth-child(3n) {
-  //       margin-right: 0;
-  //     }
-  //   }
-  // }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: 30px;
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+    }
+  }
 
   &:hover,
   &:focus {
@@ -42,10 +42,10 @@
 }
 .list-portfolio:not(:last-child) {
   @media screen and (min-width: 768px) {
-    // margin-right: 30px;
+    margin-right: 30px;
   }
   @media screen and (min-width: 1200px) {
-    // margin-right: 30px;
+    margin-right: 30px;
   }
 }
 
