--- a/css/main.css
+++ b/css/main.css
@@ -1030,15 +1030,15 @@ ol {
   }
 }
 
-.list-portfolio {
-  display: block;
-  justify-content: space-between;
-  margin-bottom: 30px;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .list-portfolio:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.list-portfolio:hover, .list-portfolio:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+@media screen and (min-width: 1200px) {
+  .list-portfolio:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .list-portfolio:hover .content-top-text {
@@ -1143,6 +1143,20 @@ ol {
     flex-wrap: wrap;
     margin-bottom: -30px;
   }
+}
+
+.list-portfolio {
+  display: block;
+  margin-right: 8px;
+  align-items: center;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.list-portfolio:nth-child(5n) {
+  margin-right: 0;
+}
+.list-portfolio:hover, .list-portfolio:focus {
+  color: var(--accent-color);
 }
 
 .footer {
