--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -9,37 +9,55 @@
     justify-content: center;
   }
 }
-.list-portfolio {
-  display: block;
-  justify-content: space-between;
-  margin-bottom: 30px;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+// .list-portfolio {
+//   display: block;
+//   justify-content: space-between;
+//   margin-bottom: 30px;
+//   margin-right: 30px;
+//   transition-duration: 250ms;
+//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//   &:nth-child(3n) {
+//     margin-right: 0;
+//   }
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//   }
+// }
 
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: 30px;
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
+// .list-portfolio:hover .content-top-text {
+//   transform: translateY(0%);
+// }
+// .shadow:hover,
+// .shadow:focus {
+//   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+// }
 
-    @media screen and (min-width: 1200px) {
-      display: flex;
-      flex-wrap: wrap;
-      margin-right: 30px;
-      &:nth-child(3n) {
-        margin-right: 0;
-      }
-    }
-  }
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     flex-wrap: wrap;
+//     margin-right: 30px;
+//     &:nth-child(2n) {
+//       margin-right: 0;
+//     }
 
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-}
+//     @media screen and (min-width: 1200px) {
+//       display: flex;
+//       flex-wrap: wrap;
+//       margin-right: 30px;
+//       &:nth-child(3n) {
+//         margin-right: 0;
+//       }
+//     }
+//   }
+
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//   }
+// }
 .list-portfolio:not(:last-child) {
   @media screen and (min-width: 768px) {
     margin-right: 30px;
@@ -146,5 +164,20 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: -30px;
+  }
+}
+
+.list-portfolio {
+  display: block;
+  margin-right: 8px;
+  align-items: center;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:nth-child(5n) {
+    margin-right: 0;
+  }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
   }
 }
