--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/img_overlay.jpg");
+    url("../img/hero-mob1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
