--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,14 @@ ol {
   .flex-container {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
   }
 }
 
@@ -556,7 +564,7 @@ ol {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/img_overlay.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero-mob1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -649,20 +657,10 @@ ol {
 }
 
 .team__list {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   text-align: center;
-}
-@media screen and (min-width: 768px) {
-  .team__list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .team__list {
-    display: flex;
-    flex-wrap: wrap;
-  }
 }
 
 .img {
@@ -689,29 +687,25 @@ ol {
 
 .team__item {
   width: 100%;
-  justify-content: space-between;
   background-color: #ffffff;
   border: 1px solid #ececec;
-  margin-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
+}
+.team__item:last-child {
+  margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
   .team__item {
     width: 354px;
-    margin-right: 15px;
-  }
-  .team__item:last-child {
-    margin-right: 0;
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .team__item {
     width: 270px;
-    margin-right: 30px;
-  }
-  .team__item:last-child {
-    margin-right: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -980,7 +974,6 @@ ol {
 .clients {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
 }
 
 .clients__item {
@@ -1031,8 +1024,15 @@ ol {
 
 .portfolio__button {
   display: flex;
-  justify-content: center;
-  padding-bottom: 56px;
+  flex-wrap: wrap;
+  margin-bottom: 35px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__button {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 56px;
+  }
 }
 
 .list-portfolio {
@@ -1041,7 +1041,6 @@ ol {
   margin-bottom: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  justify-content: space-between;
   width: 100%;
 }
 .list-portfolio:hover, .list-portfolio:focus {
@@ -1054,7 +1053,7 @@ ol {
 }
 @media screen and (min-width: 1200px) {
   .list-portfolio {
-    width: calc((100% - 90px) / 3);
+    width: calc((100% - 60px) / 3);
   }
 }
 
@@ -1090,6 +1089,12 @@ ol {
 }
 
 .portfolio__button-item {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+  padding-bottom: 15px;
   display: block;
   margin-right: 8px;
   align-items: center;
