--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -29,5 +29,11 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
   }
 }
