--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,54 +1,33 @@
 .portfolio__button {
   display: flex;
-  justify-content: center;
-  padding-bottom: 56px;
+  flex-wrap: wrap;
+  margin-bottom: 35px;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 56px;
+  }
 }
 .list-portfolio {
   display: block;
   justify-content: center;
   margin-bottom: 30px;
-  // margin-right: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+  width: 100%;
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  justify-content: space-between;
-  width: 100%;
+
   @media screen and (min-width: 768px) {
     width: calc((100% - 30px) / 2);
   }
   @media screen and (min-width: 1200px) {
-    width: calc((100% - 90px) / 3);
+    width: calc((100% - 60px) / 3);
   }
-
-  // @media screen and (min-width: 768px) {
-  //   display: block;
-  //   justify-content: space-between;
-  //   margin-bottom: 30px;
-  //   gap: 30px;
-  //   transition-duration: 250ms;
-  //   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  //   &:nth-child(3n) {
-  //     margin-right: 0;
-  //   }
-
-  //   }
-
-  // @media screen and (min-width: 1200px) {
-  //   display: block;
-  //   justify-content: space-between;
-  //   margin-bottom: 30px;
-  //   margin-right: 30px;
-  //   transition-duration: 250ms;
-  //   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  //   &:nth-child(3n) {
-  //     margin-right: 0;
-  //   }
-  // }
 }
 
 .list-portfolio:hover .content-top-text {
@@ -82,6 +61,13 @@
 }
 
 .portfolio__button-item {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+  padding-bottom: 15px;
+
   display: block;
   margin-right: 8px;
   align-items: center;
