--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -11,18 +11,10 @@
   letter-spacing: 0.03em;
 }
 .team__list {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   text-align: center;
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    flex-wrap: wrap;
-  }
 }
 
 .img {
@@ -47,28 +39,25 @@
 
 .team__item {
   width: 100%;
-  justify-content: space-between;
   background-color: #ffffff;
   border: 1px solid #ececec;
-  margin-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
+  margin-bottom: 30px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   @media screen and (min-width: 768px) {
     width: 354px;
-    margin-right: 15px;
-    &:last-child {
-      margin-right: 0;
-    }
+    margin-bottom: 0;
   }
 
   @media screen and (min-width: 1200px) {
     width: 270px;
-    margin-right: 30px;
-    &:last-child {
-      margin-right: 0;
-    }
+    margin-bottom: 0;
   }
 }
 
